--- a/my-orders.html
+++ b/my-orders.html
@@ -135,138 +135,7 @@
                         <div class="title">
                             <h2>My Orders</h2>
                         </div>
-                        <div class="order-details-row">
-                            <div class="row">
-                                <div class="col-lg-6">
-                                    <div class="row">
-                                        <div class="col-lg-4">
-                                            <div class="restaurent-names details-box">
-                                                <div class="title">
-                                                    <h3>RESTAURANT</h3>
-                                                </div>
-                                                <div class="list">
-                                                    <ul>
-                                                        <li>
-                                                            <label for="" class="d-lg-none d-block">restaurent</label>
-                                                            <a href="/">AMWAJ</a>
-                                                        </li>
-                                                        <li>
-                                                            <label for="" class="d-lg-none d-block">restaurent</label>
-                                                            <a href="/">AMWAJ</a>
-                                                        </li>
-                                                        <li>
-                                                            <label for="" class="d-lg-none d-block">restaurent</label>
-                                                            <a href="/">AMWAJ</a>
-                                                        </li>
-                                                        <li>
-                                                            <label for="" class="d-lg-none d-block">restaurent</label>
-                                                            <a href="/">AMWAJ</a>
-                                                        </li>
-                                                        <li>
-                                                            <label for="" class="d-lg-none d-block">restaurent</label>
-                                                            <a href="/">AMWAJ</a>
-                                                        </li> 
-                                                        <li>
-                                                            <label for="" class="d-lg-none d-block">restaurent</label>
-                                                            <a href="/">AMWAJ</a>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-4">
-                                            <div class="restaurent-names details-box">
-                                                <div class="title">
-                                                    <h3>RESTAURANT</h3>
-                                                </div>
-                                                <div class="list">
-                                                    <ul>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-4">
-                                             <div class="restaurent-names details-box">
-                                                <div class="title">
-                                                    <h3>RESTAURANT</h3>
-                                                </div>
-                                                <div class="list">
-                                                    <ul>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                    </ul>
-                                                </div>
-                                            </div>      
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="row">
-                                        <div class="col-lg-4">
-                                            <div class="restaurent-names details-box">
-                                                <div class="title">
-                                                    <h3>RESTAURANT</h3>
-                                                </div>
-                                                <div class="list">
-                                                    <ul>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-4">
-                                            <div class="restaurent-names details-box">
-                                                <div class="title">
-                                                    <h3>RESTAURANT</h3>
-                                                </div>
-                                                <div class="list">
-                                                    <ul>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-4">
-                                             <div class="restaurent-names details-box">
-                                                <div class="title">
-                                                    <h3>RESTAURANT</h3>
-                                                </div>
-                                                <div class="list">
-                                                    <ul>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                    </ul>
-                                                </div>
-                                            </div>      
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+
 
                         <div class="table-wrapper">
                             <table class="data-table">
@@ -278,7 +147,7 @@
                                         <th>TOTAL PRICE</th>
                                         <th>STATUS</th>
                                         <th width="100">INVOICE</th>
-                                        <th width="150"></th>
+                                        <th width="120"></th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -303,12 +172,12 @@
                                             <span class="table-heading">STATUS</span>
                                             Progress
                                         </td>
-                                        <td class="text-center">
+                                        <td class="text-center hidden-tablet" style="white-space:nowrap">
                                             <a href="Javascript:void(0)" class="download-pdf icon-btn">
                                                 <i class="fa fa-file-pdf-o"></i>
                                             </a>
                                         </td>
-                                        <td class="text-center">
+                                        <td class="text-center" style="white-space:nowrap">
                                             <a href="Javascript:void(0)" class="download-pdf icon-btn d-lg-none">
                                                 <i class="fa fa-file-pdf-o"></i>
                                             </a>
@@ -342,12 +211,12 @@
                                             <span class="table-heading">STATUS</span>
                                             Progress
                                         </td>
-                                        <td class="text-center">
+                                        <td class="text-center hidden-tablet" style="white-space:nowrap">
                                             <a href="Javascript:void(0)" class="download-pdf icon-btn">
                                                 <i class="fa fa-file-pdf-o"></i>
                                             </a>
                                         </td>
-                                        <td class="text-center">
+                                        <td class="text-center" style="white-space:nowrap">
                                             <a href="Javascript:void(0)" class="download-pdf icon-btn d-lg-none">
                                                 <i class="fa fa-file-pdf-o"></i>
                                             </a>
@@ -381,12 +250,12 @@
                                             <span class="table-heading">STATUS</span>
                                             Progress
                                         </td>
-                                        <td class="text-center">
+                                        <td class="text-center hidden-tablet" style="white-space:nowrap">
                                             <a href="Javascript:void(0)" class="download-pdf icon-btn">
                                                 <i class="fa fa-file-pdf-o"></i>
                                             </a>
                                         </td>
-                                        <td class="text-center">
+                                        <td class="text-center" style="white-space:nowrap">
                                             <a href="Javascript:void(0)" class="download-pdf icon-btn d-lg-none">
                                                 <i class="fa fa-file-pdf-o"></i>
                                             </a>
@@ -420,12 +289,12 @@
                                             <span class="table-heading">STATUS</span>
                                             Progress
                                         </td>
-                                        <td class="text-center">
+                                        <td class="text-center hidden-tablet" style="white-space:nowrap">
                                             <a href="Javascript:void(0)" class="download-pdf icon-btn">
                                                 <i class="fa fa-file-pdf-o"></i>
                                             </a>
                                         </td>
-                                        <td class="text-center">
+                                        <td class="text-center" style="white-space:nowrap">
                                             <a href="Javascript:void(0)" class="download-pdf icon-btn d-lg-none">
                                                 <i class="fa fa-file-pdf-o"></i>
                                             </a>
