--- a/transaction-summary.html
+++ b/transaction-summary.html
@@ -133,121 +133,113 @@
                 <div class="col-lg-9">
                     <div class="account-content my-order-box">
                         <div class="title">
-                            <h2>My Orders</h2>
+                            <h2>Ahlan Credit Transaction</h2>
                         </div>
-                        <div class="order-details-row">
-                            <div class="row">
-                                <div class="col-lg-6">
-                                    <div class="row">
-                                        <div class="col-lg-4">
-                                            <div class="restaurent-names details-box">
-                                                <div class="title">
-                                                    <h3>RESTAURANT</h3>
-                                                </div>
-                                                <div class="list">
-                                                    <ul>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-4">
-                                            <div class="restaurent-names details-box">
-                                                <div class="title">
-                                                    <h3>RESTAURANT</h3>
-                                                </div>
-                                                <div class="list">
-                                                    <ul>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-4">
-                                             <div class="restaurent-names details-box">
-                                                <div class="title">
-                                                    <h3>RESTAURANT</h3>
-                                                </div>
-                                                <div class="list">
-                                                    <ul>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                    </ul>
-                                                </div>
-                                            </div>      
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="row">
-                                        <div class="col-lg-4">
-                                            <div class="restaurent-names details-box">
-                                                <div class="title">
-                                                    <h3>RESTAURANT</h3>
-                                                </div>
-                                                <div class="list">
-                                                    <ul>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-4">
-                                            <div class="restaurent-names details-box">
-                                                <div class="title">
-                                                    <h3>RESTAURANT</h3>
-                                                </div>
-                                                <div class="list">
-                                                    <ul>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-4">
-                                             <div class="restaurent-names details-box">
-                                                <div class="title">
-                                                    <h3>RESTAURANT</h3>
-                                                </div>
-                                                <div class="list">
-                                                    <ul>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                    </ul>
-                                                </div>
-                                            </div>      
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                        <div class="table-wrapper">
+                            <table class="data-table">
+                                <thead>
+                                    <tr>
+                                        <th>RESTAURANT</th>
+                                        <th>TRANSACTION TYPE</th>
+                                        <th>DATE</th>
+                                        <th>CREDIT EXPIRY</th>
+                                        <th>POINT EARNED</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>
+                                            <span class="table-heading">RESTAURANT</span>
+                                            AMWAJ
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">ORDER ID</span>
+                                            OAOPZZTJM
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">DATE</span>
+                                            13-APR-2020
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">TOTAL PRICE</span>
+                                            BD270.00
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">STATUS</span>
+                                            Progress
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td>
+                                            <span class="table-heading">RESTAURANT</span>
+                                            AMWAJ
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">ORDER ID</span>
+                                            OAOPZZTJM
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">DATE</span>
+                                            13-APR-2020
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">TOTAL PRICE</span>
+                                            BD270.00
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">STATUS</span>
+                                            Progress
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td>
+                                            <span class="table-heading">RESTAURANT</span>
+                                            AMWAJ
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">ORDER ID</span>
+                                            OAOPZZTJM
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">DATE</span>
+                                            13-APR-2020
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">TOTAL PRICE</span>
+                                            BD270.00
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">STATUS</span>
+                                            Progress
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td>
+                                            <span class="table-heading">RESTAURANT</span>
+                                            AMWAJ
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">ORDER ID</span>
+                                            OAOPZZTJM
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">DATE</span>
+                                            13-APR-2020
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">TOTAL PRICE</span>
+                                            BD270.00
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">STATUS</span>
+                                            Progress
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
