--- a/checkout-address.html
+++ b/checkout-address.html
@@ -93,13 +93,14 @@
                 </ul>
              </div>
              <div class="header-bottom">
-                <div class="text">
-                    <h4>Bahrain</h4>
+                <div class="country-dropdown">
+                    <select name="lang" id="language" class="country-input">
+                        <option value="bahrain">Bahrain</option>
+                        <option value="qatar">Qatar</option>
+                        <option value="kuwait">Kuwait</option>
+                    </select>
                 </div>
-                <div class="picture">
-                    <img src="assets/images/header-arrow.svg" alt="">
-                </div>
-             </div>
+            </div>
          </div>
      </div>
 
