--- a/checkout-4.html
+++ b/checkout-4.html
@@ -152,7 +152,7 @@
 
                                 <div class="row mt-4">
                                     <div class="col-lg-6 mb-3">
-                                       <input type="date" name="date" id="" placeholder="Select Date" value="Select Date" class="date-select">
+                                       <input type="text" name="date" id="" placeholder="Select Date" value="Select Date" class="date-select">
                                     </div>
                                     <div class="col-lg-6">
                                         <select name="" id="" class="form-control">
