--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             <img src="assets/images/listing-img-truck.svg" alt="">
                             <div>
                                 <span class="d-block span-grey">Now</span>
-                                <span class="d-block d-flex span-blue">Manama <img src="assets/images/arrow-1.svg" class="ml-2" alt=""> </span>
+                                <span class="d-block d-flex span-blue">Manama <img src="assets/images/arrow-1.svg" class="ml-2" alt="" popup="#changeFilters"> </span>
                             </div>
                         </div>
 
